k8s/api-gateway-deployment.yaml
# k8s/api-gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      labels:
        app: api-gateway
    spec:
      containers:
        - name: api-gateway
          image: messenger-api-gateway:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8180
          readinessProbe:
            httpGet:
              path: /health
              port: 8180
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8180
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
            requests:
              memory: "64Mi"
              cpu: "250m"
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
  namespace: chat
spec:
  selector:
    app: api-gateway
  ports:
    - protocol: TCP
      port: 8180
      targetPort: 8180
  type: LoadBalancer
