k8s/user-service-deployment.yaml
# k8s/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  namespace: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      serviceAccountName: user-service-sa
      containers:
        - name: user-service
          image: messenger-user-service:latest # Replace with the actual image name or build locally
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 50051
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  namespace: chat
spec:
  selector:
    app: user-service
  ports:
    - protocol: TCP
      port: 50051
      targetPort: 50051
  type: ClusterIP
